<resources>
    <!-- ActivityMain -->
    <string name="app_name">Martel\'app</string>
    <string name="bouton_nouvel_exercice">Nouvel exercice</string>
    <string name="aucune_parcelle">Aucune parcelle sélectionnée</string>
    <string name="bouton_continuer_exercice">Continuer un ancien exercice</string>
    <string name="bouton_en_savoir_plus">En savoir plus</string>
    <!-- ActivityMain -->


    <!-- CHOIX PARCELLE -->
    <string name="choix_parcelle_titre">Choix d\'une parcelle pour l\'exercice de martelage</string>
    <string name="choix_parcelle_select">Sélectionner une parcelle :</string>
    <string name="pas_de_co">Pas de connexion internet pour afficher les parcelles dans la liste</string>
    <string name="pas_de_co_maj">Pas de connexion internet pour mettre à jour la base de données</string>
    <string name="maj_en_cours">Mise à jour en cours</string>
    <string name="maj_bdd">Mise à jour de la parcelle</string>
    <string name="retour_main">Retour</string>
    <!-- CHOIX PARCELLE -->

    <!-- EN SAVOIR PLUS -->
    <string name="en_savoir_plus_realisation">Cette application a été réalisée dans le cadre d\'un projet de 3ème année de licence informatique.</string>
    <string name="en_savoir_plus_client">
        <b>Parc naturel régional du Massif des Bauges</b>\n\n
        • Pierre Paccard\n
        • Mathilde Pantalacci
    </string>
    <string name="en_savoir_plus_groupe_projet">
        <b>Etudiants de l\'Université Savoie Mont-Blanc</b>\n\n
        • Steeve Ciminera\n
        • Baptiste Diot\n
        • Hugues Reynaud\n
        • Teddy Ruppin\n
        • Romain Sanchez\n\n
        Contact : ciminera.steeve@gmail.com
    </string>
    <!-- EN SAVOIR PLUS -->

    <!-- NOM EQUIPE -->
    <string name="hint_nom_equipe">Nom Equipe</string>
    <string name="saisir_nom">Veuillez saisir un nom</string>
    <string name="saisir_pas_de_caracteres_speciaux">Veuillez saisir un nom sans caractères spéciaux (, \' \" ; : / ! ? ~) </string>
    <string name="bouton_commencer">Commencer</string>
    <!-- NOM EQUIPE -->

    <!--****************************************************** EXERCICE ******************************************************-->

    <!-- Consignes -->
    <string name="general_caps">GÉNÉRAL</string>
    <string name="consignes_general">
        A travers l’exercice de martelage, il s’agit de vous :\n\n
        - Former au martelage et aux modes de gestion favorables à la biodiversité, à la naturalité,
        et à la production de bois.\n\n
        - Accompagner dans l’analyse de vos choix et de ses conséquences écologiques et économiques
        sur le peuplement.\n
    </string>

    <string name="objectif_caps">OBJECTIFS</string>

    <string name="button_go_to_info">> Consulter les infos de la parcelle</string>
    <!-- Consignes -->


    <!-- INFOS -->
    <string name="caracteristique_parcelle_caps">CARACTERISTIQUES</string>

    <string name="graphe_volume_caps">VOLUME</string>
    <string name="titre_graphe_volume_diametre_info">Volume par classe de diamètre</string>

    <string name="graphe_note_eco_caps">NOTE ECOLOGIQUE</string>
    <string name="titre_graphe_nbtige_noteeco_info">Nombre de tiges par note écologique</string>

    <string name="graphe_essence_caps">ESSENCE</string>
    <string name="titre_graphe_nbtige_essence_info">Nombre de tiges par essence</string>

    <string name="button_go_to_carte">> Consulter la carte de la parcelle</string>
    <!-- INFOS -->


    <!-- CARTE -->
    <string name="titre_carte">Carte de la parcelle</string>
    <!-- CARTE -->


    <!-- SELECTION -->
    <string name="hint_saisie">Saisir le numéro d\'un arbre</string>

    <string name="textImgBoutonConserver">Je le conserve pour la biodiversité</string>
    <string name="choix_conserver"><b>Je le conserve pour la biodiversité :</b></string>
    <string name="deja_conserve">Cet arbre a déjà été conservé !</string>
    <string name="raison_conserve">Arbre conservé pour la Biodiversité</string>
    <string name="raison_conserve_text">Cet arbre sera immobilisé sur plusieurs dizaines d\'années pour permettre la réalisation du stade final du cycle naturel de l\'arbre. Il s\'agit de le laisser vieillir jusqu\'à son écroulement.
        \nEn vieillissant, il développe des micro-habitats (cavité, fissure, décollement d\'écorce&#8230;) pour l\'accueil de nombreuses espèces (pics, chouettes, petits mammifères, insectes, champignons&#8230;).
        Puis en tombant au sol, il sera décomposé par les micro-organismes, pour réintégrer le sol forestier.
        \nPlus son diamètre est important, plus sa capacité d\'accueil de la biodiversité est favorable.
    </string>

    <string name="textImgBoutonProchaineFois">Je le martèlerai une prochaine fois</string>

    <string name="textImgBoutonMarteler">Je le martèle</string>
    <string name="choix_raison_martelage"><b>Je le martèle :</b></string>
    <string name="deja_martele">Cet arbre a déjà été martelé !</string>

    <string name="raison_1">Parce que l\'arbre est mûr</string>
    <string name="raison_2">Pour éclaircir au profit d\'un arbre d\'avenir</string>
    <string name="raison_3">Pour des raisons sanitaires</string>
    <string name="raison_4">Pour favoriser la régénération</string>
    <string name="raison_5">Pour faciliter l\'exploitation</string>

    <string name="existe_pas">Cet arbre n\'existe pas !</string>

    <string name="angry_response">Ça va pas la tête ?!\nOù est-ce que va habiter la faune qui entretient votre forêt si vous coupez des arbres aussi importants ?!</string>
    <!-- SELECTION -->

    <!-- ARBRES SELECTIONNES -->
    <string name="header_Numero">Numéro</string>
    <string name="header_Essence">Essence</string>
    <string name="header_Diametre">Diamètre</string>
    <string name="header_NoteEco">Note écologique</string>
    <string name="bouton_terminer_exercice">Terminer l\'exercice</string>
    <!-- ARBRES SELECTIONNES -->



    <!--****************************************************** ANALYSE ******************************************************-->


    <!-- RESUME -->
    <string name="titre_respect_consignes">Ai-je respecté les consignes ?</string>
    <string name="titre_synthese">Synthèse de votre martelage</string>

    <string name="analyse_respect_consignes_nav">RESPECT DES CONSIGNES</string>
    <string name="analyse_synthese_nav">SYNTHESE MARTELAGE</string>
    <!-- RESUME -->


    <!-- LISTE ARBRES SELECTIONNES -->
    <string name="type_arbres_liste_marteles">Arbres Martelés</string>
    <string name="type_arbres_liste_conserves">Arbres Conservés</string>

    <string name="analyse_arbres_selectionnes_marteles_nav">ARBRES MARTELES</string>
    <string name="analyse_arbres_selectionnes_conserves_nav">ARBRES CONSERVES</string>
    <!-- LISTE ARBRES SELECTIONNES -->


    <!-- GRAPHE VOLUME -->
    <string name="titre_coupe_volume">Répartition du prélèvement en volume par classe de diamètre</string>
    <!-- GRAPHE VOLUME -->


    <!-- GRAPHE NB TIGES -->
    <string name="titre_nb_tige_essence">Répartition du prélèvement en nombre de tiges par essence</string>
    <string name="titre_nb_tige_diametre">Répartition du prélèvement en nombre de tiges par classe de diamètre</string>
    <string name="titre_nb_tige_note_eco">Répartition du prélèvement en nombre de tiges par note écologique</string>
    <string name="titre_nb_tige_categorie_diametre">Evolution du nombre de tiges par classe de diamètre</string>

    <string name="analyse_graphe_Essence_nav">ESSENCE</string>
    <string name="analyse_graphe_Diametre_nav">DIAMETRE</string>
    <string name="analyse_graphe_Note_Eco_nav">NOTE ECOLOGIQUE</string>
    <string name="analyse_graphe_Classe_Diametre_nav">CLASSE DE DIAMETRE</string>
    <!-- GRAPHE NB TIGES -->


    <!-- GRAPHE RAISONS -->
    <string name="titre_pourcentage_raison">Répartition des raisons de martelage</string>
    <!-- GRAPHE RAISONS -->

    <!-- GRAPHE CARTE ANALYSE -->
    <string name="titre_carte_analyse">Carte des arbres martelés et conservés</string>

    <!-- CARTE PARCELLE -->
    <string name="bouton_terminer_analyse"> Terminer l\'exercice et sauvegarder l\'analyse</string>
    <!-- CARTE PARCELLE -->


    <!-- GRAPHE LEGENDE -->
    <string name="axe_volume_m3">
        Volume (m3)
    </string>
    <string name="axe_diametre_cm">
        Diamètre (cm)
    </string>
    <string name="axe_nombre_tiges">
        Nombre de tiges
    </string>
    <string name="axe_essence">
        Essence
    </string>
    <string name="axe_note_eco">
        Note écologique
    </string>
    <string name="axe_raison">
        Raison
    </string>
    <string name="axe_pourcentage_raison">
        Pourcentage
    </string>
    <!-- GRAPHE LEGENDE -->


</resources>
