<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@color/colorBackground"
    tools:context="martelapp.test.Activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/text_parcelle_en_cours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:layout_weight="2"
            android:text="" />

        <TextView
            android:id="@+id/AppName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="80sp"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/parametres_parcelle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:background="@color/colorWhite"
                android:tint="@color/bouton_actualiser_liste"
                android:text=""
                app:srcCompat="@drawable/parametres_maj_bdd"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="5">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/nouvel_exercice"
                style="@style/button_vert"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="30sp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:text="@string/bouton_nouvel_exercice" />
        </LinearLayout>

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">


        <Button
            android:id="@+id/continuer_exercice"
            style="@style/button_vert"
            android:layout_width="250dp"
            android:layout_height="70sp"
            android:layout_margin="8dp"
            android:text="@string/bouton_continuer_exercice"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/en_savoir_plus"
            style="@style/button_vert"
            android:layout_width="250dp"
            android:layout_height="70sp"
            android:layout_margin="8dp"
            android:text="@string/bouton_en_savoir_plus"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
