<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="martelapp.test.Activity.AnalyseActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_tout_analyse_liste_arbre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation_liste_arbres_traites_analyse"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:gravity="top"
                android:orientation="horizontal"
                android:weightSum="12">

                <ImageButton
                    android:id="@+id/previousInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:scaleX="-1"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/arrow" />

                <LinearLayout
                    android:id="@+id/layout_liste_arbre_analyse"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/text_type_liste_arbres"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.75"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="36sp"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="50sp"
                            app:autoSizeMinTextSize="12sp"
                            app:autoSizeStepGranularity="4sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:padding="8dp"
                            android:weightSum="6">


                            <TextView
                                android:id="@+id/text_header_numero"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/header_Numero"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="50sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="4sp"/>

                            <TextView
                                android:id="@+id/text_header_essence"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1.6"
                                android:gravity="center_vertical"
                                android:text="@string/header_Essence"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="50sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="4sp"/>

                            <TextView
                                android:id="@+id/text_header_diametre"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/header_Diametre"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="50sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="4sp"/>

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.9" />

                            <TextView
                                android:id="@+id/text_header_note_eco"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.5"
                                android:gravity="center|center_vertical"
                                android:text="@string/header_NoteEco"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="50sp"
                                app:autoSizeMinTextSize="8sp"
                                app:autoSizeStepGranularity="4sp"/>
                        </LinearLayout>

                        <ListView
                            android:id="@+id/liste_arbres_marteles_analyse"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6.25" />

                        <ListView
                            android:id="@+id/liste_arbres_conserves_analyse"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6.5" />

                        <TextView
                            android:id="@+id/text_complement_arbres"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="30sp"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="50sp"
                            app:autoSizeMinTextSize="12sp"
                            app:autoSizeStepGranularity="4sp"/>

                        <TextView
                            android:id="@+id/text_couleur_arbre"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="30sp"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="50sp"
                            app:autoSizeMinTextSize="12sp"
                            app:autoSizeStepGranularity="4sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:orientation="vertical"
                        android:weightSum="6">

                        <include layout="@layout/martele_card" />


                    </LinearLayout>


                </LinearLayout>

                <ImageButton
                    android:id="@+id/nextInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/arrow" />
            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation_liste_arbres_traites_analyse"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:itemBackground="@color/colorWhite"
            app:itemIconTint="@drawable/bottom_nav_color_selector"
            app:itemTextColor="@drawable/bottom_nav_color_selector"
            app:menu="@menu/analyse_liste_arbres_traites_bottom_nav"
            />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>